Fixed keyboard landmark menu items cut off when new navigation enabled (https://github.com/woocommerce/woocommerce-admin/pull/6225)

--- a/plugins/woocommerce-admin/client/navigation/style.scss
+++ b/plugins/woocommerce-admin/client/navigation/style.scss
@@ -5,6 +5,10 @@
 .has-woocommerce-navigation {
 	margin-top: -$admin-bar-height;
 
+	.screen-reader-shortcut:focus {
+		top: 7px;
+	}
+
 	#wpadminbar,
 	#adminmenuwrap,
 	#adminmenuback {
